# mcpprotocol

./: CMakeLists.txt  LICENSE.MD  README.MD
example/: main.cpp
mcpprotocol/: compression.hpp  deserializer.cpp  deserializer.hpp  exceptions.hpp  mcpprotocol.hpp  network_state.hpp  packet_base.hpp  packet_frame.hpp  packet_traits.hpp  reader.cpp  reader.hpp  serializer.cpp  serializer.hpp  types.hpp  version.hpp  writer.cpp  writer.hpp
mcpprotocol/packets/: config_client_bound.hpp  config_server_bound.hpp  handshake_client_bound.hpp  handshake_server_bound.hpp  login_client_bound.hpp  login_server_bound.hpp  play_client_bound.hpp  play_server_bound.hpp  status_client_bound.hpp  status_server_bound.hpp
packet_gen/: generate.sh  main.py  packets.json  packets.txt
test/: deserializer.cpp  init.cpp  roundtrip.cpp  serializer.cpp  writer.cpp
